[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "scikit-bloom"
version = "0.2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  'scikit-learn >= 1.0.0',
  'scikit-partial >= 0.1.0',
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
